add build rule for benchmark_model
for android, e.g.
  bazel build --config android_arm64 --config monolithic --cxxopt=-std=c++11  //tensorflow/contrib/lite/tools:benchmark_model

for desktop, e.g.,
  bazel build --config opt //tensorflow/contrib/lite/tools:benchmark_model

--- a/tensorflow/contrib/lite/tools/BUILD
+++ b/tensorflow/contrib/lite/tools/BUILD
@@ -5,6 +5,25 @@ package(default_visibility = [
 licenses(["notice"])  # Apache 2.0
 
 load("//tensorflow:tensorflow.bzl", "tf_cc_binary")
+load("//tensorflow/contrib/lite:build_def.bzl", "tflite_linkopts")
+
+tf_cc_binary(
+    name = "benchmark_model",
+    srcs = [
+        "benchmark_model.cc",
+        "mutable_op_resolver.h"
+    ],
+    linkopts = tflite_linkopts() + select({
+        "//tensorflow:android": [
+            "-pie",  # Android 5.0 and later supports only PIE
+            "-lm",  # some builtin ops, e.g., tanh, need -lm
+        ],
+        "//conditions:default": [],
+    }),
+    deps = [
+        "//tensorflow/contrib/lite/kernels:builtin_ops",
+    ],
+)
 
 tf_cc_binary(
     name = "generate_op_registrations",
